--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
+    "stream-chat": "^9.13.0",
+    "stream-chat-react": "^13.3.0",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.6"
   },
